# recipes

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
content/: banana-pancakes.md  black-beans.md  braised-napa-cabbage.md  chicken-stir-fry.md  cilantro-crema.md  cilantro-lime-brown-rice-with-green-chiles.md  cilantro-rice.md  cornbread-squares.md  fajita-mix.md  farro-arroz-rojo.md  freezer-jalapeno-cheddar-cornbread-squares.md  freezer-ready-smoky-flank-steak-stew.md  instant-pot-white-chicken-chili.md  miso-chili-roasted-broccoli-and-carrots.md  pasta-aglio-olio.md  roasted-eggplant.md  salsa-verde-braised-chicken.md  smokey-pepper-bbq-sauce.md  smoky-sweet-potato-black-bean-mash.md  sweet-potato-plantain-mash.md  tofu-chorizo.md  turkey-chili.md
src/: auth.rs  handlers.rs  instacart.rs  lib.rs  main.rs  models.rs  pantry.rs  recipes.rs  shopping.rs
src/templates/: components.rs  mod.rs  pantry.rs  recipe_edit.rs  recipe_list.rs  recipe_view.rs  shopping.rs  styles.rs
