[package]
name = "recipes"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
sled = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.10"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
walkdir = "2"
rand = "0.8"
ammonia = "4"
subtle = "2.5"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
